fixed spacing issues

--- a/style.css
+++ b/style.css
@@ -242,7 +242,6 @@ form .button:hover {
     display: flex;
     justify-content: center;
 }
-
 .home-arrow img {
     width: 50px;
     margin-top: -100px;
@@ -256,7 +255,6 @@ form .button:hover {
 /* .ease-in-out {
     animation: grow 7s ease-in-out infinite;
 }
-
 @keyframes grow {
     0% {
         transform:scale(1, 1);
@@ -688,7 +686,7 @@ footer {
     }
 
     #creations {
-        height: 270vh;
+        height: 280vh;
     }
 
     .creations {
@@ -749,7 +747,7 @@ footer {
     }
 
     #creations {
-        height: 260vh;
+        height: 280vh;
     }
 
     .creations-row-1 {
@@ -767,7 +765,7 @@ footer {
 
 @media all and (max-width: 671px) {
     #creations {
-        height: 260vh;
+        height: 270vh;
     }
 
     .contact-info input,
@@ -790,7 +788,7 @@ footer {
     }
 
     #creations {
-        height: 250vh;
+        height: 270vh;
     }
 }
 
@@ -857,11 +855,11 @@ footer {
     }
 
     #about {
-        height: 145vh;
+        height: 160vh;
     }
 
     .tech-stack-item {
-        margin: 0 -34px;
+        margin: 0 -36px;
     }
 
     .tech-stack-item figcaption {
@@ -869,7 +867,7 @@ footer {
     }
 
     #creations {
-        height: 225vh;
+        height: 300vh;
     }
 
     .creations {
@@ -894,7 +892,7 @@ footer {
 
     .other-creations {
         width: 100%;
-        height: 135vh;
+        height: 170vh;
     }
 
     .box {
@@ -933,21 +931,5 @@ footer {
 @media all and (max-width: 361px) {
     #creations {
         height: 280vh;
-    }
-}
-
-@media all and (max-width: 375px) {
-    .tech-stack-item {
-        margin: 0 -36px;
-    }
-}
-
-@media all and (min-height: 675px) and (max-height: 800px) {
-    #creations {
-        margin-bottom: 130%;
-    }
-
-    .other-creations {
-        margin-bottom: 80%;
     }
 }
